html/css/style.css
/* ... */
.btn-text {
    color: white;
}

.link-btn {
    display: inline-block;
    padding: 6px 12px;
    margin: 5px; /* Buttons need their space. They're shy. */
    margin-bottom: 0px;
    font-weight: 400;
    line-height: 1.42857143;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    cursor: pointer;
    user-select: none;
    width: 100px;
    font-family: Arial, Tahoma, Verdana, FreeSans, sans-serif;
    font-size: 14px;
    color: white;
    border: 0;

    background: 3px 5px no-repeat;
    background-position: center;
    height: 43px;
}

.mod-btn {
    display: inline-block;
    padding: 6px 12px;
    margin: 5px; /* Buttons need their space. They're shy. */
    margin-bottom: 0px;
    font-weight: 400;
    line-height: 1.42857143;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    cursor: pointer;
    user-select: none;
    width: 100px;
    font-family: Arial, Tahoma, Verdana, FreeSans, sans-serif;
    font-size: 14px;
    color: white;
    border: 0;

    background: 3px 5px no-repeat;
    background-position: center;
    height: 43px;
}

.mod-btn:hover {
    color: #efefef;
}

.mod-btn:active {
    outline: none;
    color: #a6a6a6;
}

.mod-btn:focus {
    outline: none;
}

.mod-btn .small-btn-text {
    font-size: 10px;
    line-height: 1.1;
    display: block;
}

.btn-green { /* Settings that create the Play button */
    background-image: url(../images/btn-green.png);
}

.btn-green:hover {
    background-image: url(../images/btn-green-h.png);
}

.btn-green:active {
    background-image: url(../images/btn-green-a.png);
}

.btn-grey { /* Settings that create the Details button */
    background-image: url(../images/btn-grey.png);
}

.btn-grey:hover {
    background-image: url(../images/btn-grey-h.png);
}

.btn-grey:active {
    background-image: url(../images/btn-grey-a.png);
}

.btn-blue { /* Settings that create the Install button */
    background-image: url(../images/btn-blue.png);
}

.btn-blue:hover {
    background-image: url(../images/btn-blue-h.png);
}

.btn-blue:active {
    background-image: url(../images/btn-blue-a.png);
}

.btn-red { /* Settings that create the Error button */
    background-image: url(../images/btn-red.png);
}

.btn-red:hover {
    background-image: url(../images/btn-red-h.png);
}

.btn-red:active {
    background-image: url(../images/btn-red-a.png);
}

.btn-orange { /* Settings that create the FRED button */
    background-image: url(../images/btn-orange.png);
}

.btn-orange:hover {
    background-image: url(../images/btn-orange-h.png);
}

.btn-orange:active {
    background-image: url(../images/btn-orange-a.png);
}

.btn-yellow {
    background-image: url(../images/btn-yellow.png);
}

.btn-yellow:hover {
    background-image: url(../images/btn-yellow-h.png);
}

.btn-yellow:active {
    background-image: url(../images/btn-yellow-a.png);
}

.btn-link-red {
    background-image: url(../images/btn-link-red.png);
}

.btn-link-red:hover {
    background-image: url(../images/btn-link-red-h.png);
}

.btn-link-red:active {
    background-image: url(../images/btn-link-red-a.png);
}

.btn-link-blue {
    background-image: url(../images/btn-link-blue.png);
}

.btn-link-blue:hover {
    background-image: url(../images/btn-link-blue-h.png);
}

.btn-link-blue:active {
    background-image: url(../images/btn-link-blue-a.png);
}

.btn-link-grey {
    background-image: url(../images/btn-link-grey.png);
}

.btn-link-grey:hover {
    background-image: url(../images/btn-link-grey-h.png);
}

.btn-link-grey:active {
    background-image: url(../images/btn-link-grey-a.png);
}


/* Details page */
#details-page .img-frame {
    min-height: 300px;
    background: rgb(100, 100, 100);
    position: relative;
}

#details-page .title-frame {
    position: absolute;
    top: 0;
    left: 0;
    background: rgba(0, 0, 0, 0.5);
    padding: 5px;
    font-size: 14px;
}

#details-page .title-frame h1 {
    font-size: 18px;
    margin-top: 5px;
    margin-bottom: 0px;
}

#details-page .date-frame {
    margin-left: 5px;
}

#details-page .short-frame {
    margin-top: 5px;
}

/* Popup */
.popup-bg {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

.popup {
    position: absolute;
    top: 50%;
    left: 50%;

    width: 800px;
    height: 400px;

    margin-left: -400px;
    margin-top: -200px;

    background-color: #101010;
    padding: 5px;

    z-index: 1000;

    box-shadow: inset 0px 7px 10px -10px rgba(179,179,179,1),
                inset -7px 0px 10px -10px rgba(179,179,179,1),
                inset 7px 0px 10px -10px rgba(179,179,179,1),
                0px 7px 15px 0px rgba(0,0,0,1);
}

@media (max-width: 800px) {
    .popup {
        width: 100%;
        margin-left: 0;
        left: 0;
    }
}

.popup .title {
    color: #fff;
    margin-left: 5px;
}

.popup .content {
    position: absolute;
    top: 30px;
    left: 10px;
    right: 10px;
    bottom: 10px;

    overflow-y: auto;
    color: #fff;

    padding: 5px 15px;
    background: #2e2e2e;
}

.popup .content.iframe {
    padding: 0;
    overflow: hidden;
}

.popup .content > iframe {
    width: 100%;
    height: 100%;
    border: 0;
}

.popup .row:nth-child(even) {
    background: #444444;
}

.mod-prog-label {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    color: #bbbbbb;
}

.mod-prog-bar {
    height: 10px;
    border: 1px solid black;
    margin-top: 4px;

    background: #ddd;
}

.mod-prog-bar .inner {
    background: #1c4499;
    height: 100%;
}

.mod-prog-bar.complete .inner {
    background: #3c991c;
}

.mod-prog-status {
    font-size: 12px;
    height: 100%;
    line-height: 100%;
    margin-top: 4px;
}

/* drawer */
.settings-container .control-label {
    padding-top: 0px;

}

.kn-drawer {
    background-color: rgba(140, 140, 140, 0.37);

}
/* ... */

